# LeetCode

./: .gitignore  README.md  pyproject.toml  resolvidos.txt
leetcode/Easy/0001 - Duas Somas/: resolucao.py
leetcode/Easy/0001-duas-somas/: resolucao_0001.py  test_0001.py
leetcode/Easy/0009-numero-palindromo/: resolucao.py  test.py  test_0009.py
leetcode/Easy/0013-romano-para-inteiro/: resolucao_0013.py  test_0013.py
leetcode/Easy/0014-maior-prefixo_comum/: resolucao_0014.py  test_0014.py
leetcode/Easy/0020-parenteses-validos/: resolucao_0020  resolucao_0020.py  test_0020.py
leetcode/Easy/0026-remover-duplicatas-de-um-array-ordenado/: 0026-remover-duplicatas-de-um-array-ordenado  resolucao_0026.c  resolucao_0026.go  resolucao_0026.py  resolucao_0026_go.h  resolucao_0026_test.go  test_0026.py
leetcode/Medium/0002-adicionar-dois-numeros/: resolucao.py  test.py  test_0002.py
leetcode/Medium/0003-maior-substring-sem-repeticao-de-caracteres/: test.py  test_0003.py
leetcode/Medium/0004-maior-substring-sem-repeticao-de-caracteres/: resolucao.py
leetcode/Medium/0004-media-de-dois-arrays-ordenados/: test.py
leetcode/Medium/0005-maior-substring-palindroma/: resolucao.c  resolucao_0005.c  resolucao_0005.so-resolucao_0005.gcda  resolucao_0005.so-resolucao_0005.gcno  test.py  test_0005.py
leetcode/Medium/0006-conversao-zig-zag/: resolucao_0006.py  test_resolucao_0006.py
leetcode/Medium/0007-reverso-de-um-inteiro/: resolucao_0007.go
leetcode/Medium/0008-string-para-inteiro/: resolucao_0008.py  test_0008.py
(+7 files in other folders)
