[project]
name = "leetcode"
version = "0.1.0"
description = "Resoluções de problemas do leetcode"
authors = [
    {name = "Pedro Emanoel",email = "pedroemanoeldasilvadeoliveira@gmail.com"}
]
requires-python = "^3.14"
dependencies = [
    "pytest (>=9.1.1,<10.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = "pytest -v"
test_coverage = "pytest --cov=. --cov-report=html -v"